Added new comment layout with styling

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,6 +15,17 @@
 <body>
      <div class="container">
           <h2 class="heading">Discussions</h2>
+          <div class="new-comment-container">
+               <div class="profile-pic-container">
+                    <img src="/img/profile-pics/1.jpg" alt="profile-picture">
+               </div>
+               <div class="comment-input-container">
+                    <input type="text" placeholder="What are your thoughts?">
+               </div>
+               <div class="submit-button-container">
+                    <button class="submit-button">Comment</button>
+               </div>
+          </div>
      </div>
 </body>
 
