--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,16 +1,59 @@
 * {
-     padding: 0px;
-     margin: 0px;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
 }
 
 body {
-     font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .container {
-     padding: 50px 50px;
+    padding: 50px 300px;
 }
 
 .heading {
-     font-weight: bold;
+    font-weight: bold;
+}
+
+.profile-pic-container {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.profile-pic-container img {
+    width: 100%;
+    height: 100%;
+}
+
+.new-comment-container {
+    padding: 50px 0px;
+    border-bottom: 1px solid #80808061;
+    display: flex;
+    align-items: center;
+}
+
+.comment-input-container {
+    flex: 1;
+    margin: 0px 15px;
+}
+
+.comment-input-container input {
+    width: 100%;
+    border-radius: 5px;
+    padding: 0px 10px;
+    height: 35px;
+    border: 1px solid #80808061;
+    outline: none;
+}
+
+.submit-button {
+    color: white;
+    border-radius: 5px;
+    padding: 0px 15px;
+    height: 35px;
+    border: none;
+    background-color: #7e34f6;
 }
