Added single comment layout and styling

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -57,3 +57,59 @@ body {
     border: none;
     background-color: #7e34f6;
 }
+
+.comment-container {
+    display: flex;
+    margin: 50px 0px;
+}
+.comment-container p {
+    line-height: 1.3;
+}
+
+.comment-container .profile-pic-container {
+    margin-right: 20px;
+    min-width: 50px;
+}
+
+.comment-sub-details {
+    display: flex;
+    align-items: center;
+}
+
+.comment-sub-details .author-name {
+    font-weight: bold;
+}
+
+.comment-sub-details .interpoint {
+    display: inline;
+    margin: 0px 7px;
+}
+.comment-sub-details .timestamp {
+    color: grey;
+    font-size: 13px;
+}
+
+.comment-text-container {
+    margin: 10px 0px 15px 0px;
+}
+
+.comment-options-container {
+    display: flex;
+    align-items: center;
+}
+
+.upvote-container {
+    display: flex;
+    align-items: center;
+    margin-right: 30px;
+}
+
+.comment-options-container p {
+    color: #7e34f6;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.upvote-container :first-child {
+    margin-right: 10px;
+}
