--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -26,6 +26,39 @@
                     <button class="submit-button">Comment</button>
                </div>
           </div>
+          <div class="comments-container">
+               <div class="comment-container">
+                    <div class="profile-pic-container">
+                         <img src="/img/profile-pics/1.jpg" alt="profile-picture">
+                    </div>
+                    <div class="comment-details">
+                         <div class="comment-sub-details">
+                              <div class="author-name">Rob Hope</div>
+                              <p class="interpoint">&#183;</p>
+                              <div class="timestamp">
+                                   45 min ago
+                              </div>
+                         </div>
+                         <div class="comment-text-container">
+                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem. Lorem ipsum
+                                   dolor sit amet consectetur adipisicing elit. Harum dolor in quos doloribus
+                                   voluptatibus vel. Minima incidunt modi itaque! Et sunt autem modi id eius, dolor ab
+                                   ut a impedit?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt
+                                   dignissimos ipsam ab temporibus et ratione reiciendis natus quam fugit harum a
+                                   exercitationem voluptate optio culpa deleniti voluptates, atque vero repudiandae!</p>
+                         </div>
+                         <div class="comment-options-container">
+                              <div class="upvote-container">
+                                   <p>&#x25B2;</p>
+                                   <p>Upvote</p>
+                              </div>
+                              <div class="reply-container">
+                                   <p>Reply</p>
+                              </div>
+                         </div>
+                    </div>
+               </div>
+          </div>
      </div>
 </body>
 
